# semanticeight

./: .gitignore  .gitmodules  .mailmap  CMakeLists.txt  Makefile  README.md  bitbucket-pipelines.yml
cmake/: supereightConfig.cmake.in
config_files/: config.yaml  multiresofusion_config.yaml  multirestsdf_config.yaml  ofusion_config.yaml  tsdf_config.yaml
se_apps/: CMakeLists.txt  moc_ApplicationWindow.cpp  moc_MainWindow.cpp  moc_OpenGLWidget.cpp  moc_qcustomplot.cpp
se_apps/include/: PowerMonitor.h  default_parameters.h  draw.h  interface.h  reader.hpp  reader_base.hpp  reader_iclnuim.hpp  reader_interiornet.hpp  reader_newercollege.hpp  reader_openni.hpp  reader_raw.hpp  tick.h
se_apps/qt/: ApplicationWindow.cpp  ApplicationWindow.h  MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  QtGUI.cpp  qcustomplot.cpp  qcustomplot.h
se_apps/src/: PowerMonitor.cpp  main.cpp  morton_tool.cpp  reader.cpp  reader_base.cpp  reader_iclnuim.cpp  reader_interiornet.cpp  reader_newercollege.cpp  reader_openni.cpp  reader_raw.cpp  reader_tum.cpp  voxel_size.cpp
se_apps/test/: CMakeLists.txt  Makefile
se_apps/test/reader_iclnuim/: CMakeLists.txt  reader_iclnuim_unittest.cpp
se_apps/test/reader_openni/: CMakeLists.txt  reader_no_openni_unittest.cpp
se_apps/test/reader_raw/: CMakeLists.txt  reader_raw_unittest.cpp
se_apps/test/system/: CMakeLists.txt  gain_unittest.cpp
se_apps/test/system/fr1_desk/: association.txt  scene.raw
se_apps/test/system/fr1_desk/segmentation/class_ids/: 1305031453.359684.npy  1305031453.391690.npy
se_apps/test/system/fr1_desk/segmentation/confidence_all/: 1305031453.359684.npy  1305031453.391690.npy
se_apps/test/system/fr1_desk/segmentation/masks/: 1305031453.359684.npy  1305031453.391690.npy
se_core/: CMakeLists.txt
se_core/test/: CMakeLists.txt
se_core/test/algorithms/: CMakeLists.txt  meshing_unittest.cpp  unique_unittest.cpp
se_core/test/io/: CMakeLists.txt  io_unittest.cpp  octomap_io_unittest.cpp
se_denseslam/: CMakeLists.txt
se_denseslam/include/ptp/: Header.hpp  MotionValidatorOccupancyDense.hpp  OccupancyWorld.hpp  OmplToEigen.hpp  Path.hpp  PlanningParameter.hpp  ProbCollisionChecker.hpp  SafeFlightCorridorGenerator.hpp  common.hpp
se_denseslam/include/ptp/arc_utilities/: arc_helpers.hpp  eigen_helpers.hpp  voxel_grid.hpp
se_denseslam/include/se/: DenseSLAMSystem.h  candidate_view.hpp  commons.h  completion.hpp  config.h  constant_parameters.h  depth_utils.hpp  dist.hpp  entropy.hpp  exploration_planner.hpp  exploration_utils.hpp  lod.hpp  morton_sampling_tree.hpp  morton_sampling_tree_impl.hpp  object.hpp  object_rendering.hpp  object_rendering_impl.hpp  object_utils.hpp  path.hpp  pose_grid_history.hpp  pose_history.hpp  pose_mask_history.hpp  pose_vector_history.hpp  preprocessing.hpp  rendering.hpp  single_path_exploration_planner.hpp  tracking.hpp  voxel_implementations.hpp.in
se_denseslam/src/: DenseSLAMSystem.cpp  candidate_view.cpp  completion.cpp  depth_utils.cpp  dist.cpp  entropy.cpp  exploration_planner.cpp  exploration_utils.cpp  lod.cpp  morton_sampling_tree.cpp  object.cpp  object_rendering.cpp  object_utils.cpp  path.cpp  pose_grid_history.cpp  pose_history.cpp  pose_mask_history.cpp  pose_vector_history.cpp  preprocessing.cpp  rendering.cpp  single_path_exploration_planner.cpp  tracking.cpp
se_denseslam/src/ptp/: OccupancyWorld.cpp  ProbCollisionChecker.cpp  SafeFlightCorridorGenerator.cpp
se_denseslam/test/: CMakeLists.txt
se_denseslam/test/depth_utils/: CMakeLists.txt  depth_utils_unittest.cpp
se_denseslam/test/entropy/: CMakeLists.txt  entropy_raycast_unittest.cpp  entropy_unittest.cpp
se_denseslam/test/frustum_intersection/: CMakeLists.txt  frustum_intersection_unittest.cpp
se_denseslam/test/gain_raycasting/: CMakeLists.txt  gain_raycasting_unittest.cpp
se_denseslam/test/lod/: CMakeLists.txt  lod_unittest.cpp
se_denseslam/test/planning/: CMakeLists.txt  planning_unittest.cpp
se_denseslam/test/pose_grid_history/: CMakeLists.txt  pose_grid_history_unittest.cpp
se_denseslam/test/pose_mask_history/: CMakeLists.txt  pose_mask_history_unittest.cpp
se_denseslam/test/preprocessing/: CMakeLists.txt  preprocessing_unittest.cpp
se_shared/: CMakeLists.txt
se_shared/cmake/: SESharedConfig.cmake.in
se_shared/include/se/: bounding_volume.hpp  debug_images.hpp  detection_confidence.hpp  filesystem.hpp  filter.hpp  image_utils.hpp  image_utils_impl.hpp  instance_segmentation.hpp  perfstats.h  perfstats_impl.hpp  point_cloud_utils.hpp  projection.hpp  projective_functor.hpp  segmentation.hpp  segmentation_result.hpp  semantic_classes.hpp  semanticeight_definitions.hpp  sensor.hpp  set_operations.hpp  str_utils.hpp  str_utils_impl.hpp  system_info.hpp  timings.h
se_shared/include/se/image/: image.hpp
se_shared/src/: bounding_volume.cpp  detection_confidence.cpp  image_utils.cpp  instance_segmentation.cpp  point_cloud_utils.cpp  segmentation.cpp  segmentation_result.cpp  semantic_classes.cpp  sensor.cpp  stats.cpp  str_utils.cpp
se_shared/test/: CMakeLists.txt
se_shared/test/bounding_volume/: CMakeLists.txt  bounding_sphere_unittest.cpp
se_shared/test/image/: CMakeLists.txt  image_unittest.cpp
se_shared/test/image_utils/: CMakeLists.txt  image_utils_io_unittest.cpp  image_utils_unittest.cpp
se_shared/test/segmentation/: CMakeLists.txt  fr1_desk  segmentation_result_unittest.cpp  segmentation_unittest.cpp
se_shared/test/semantic_classes/: CMakeLists.txt  semantic_classes_unittest.cpp
se_tools/: install_dependencies.sh  plot_stats.py  semanticeight_gain_render_montage.sh  semanticeight_planning_montage.sh  semanticeight_render_montage.sh  sparse-raycast-hit-area  tiny_obj_loader.h
se_tools/benchmark_scripts/: _benchmark_base.py  _common.py  _config.py  _dataset.py  _progress_bar.py  _run.py  _sequence.py  _test_case.py  benchmark.py  datasets.py  evaluate_ate.py  plot_stats.py  result_summary.py  run_benchmark.py
se_tools/evaluation_scripts/: _run.py  (+1 more)
se_voxel_impl/: CMakeLists.txt
se_voxel_impl/test/frontiers/: CMakeLists.txt  frontiers_unittest.cpp
(+111 files in other folders)
